// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reduxFormFieldAdapter not validated input should render as expected 1`] = `
<Input
  className=""
  disabled={false}
  meta={
    Object {
      "active": false,
      "error": null,
    }
  }
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  prefixCls="ant-input"
  type="text"
  value="inputValue"
/>
`;

exports[`reduxFormFieldAdapter validate input should render Popover as invisible if there is an error but the field is active 1`] = `
<Popover
  content="error content"
  mouseEnterDelay={0.1}
  mouseLeaveDelay={0.1}
  overlayStyle={Object {}}
  placement="bottomLeft"
  prefixCls="ant-popover"
  title="error title"
  transitionName="zoom-big"
  trigger="hover"
  visible={false}
>
  <Input
    className="AdaptedReduxFormField--isValidatedInput"
    disabled={false}
    meta={
      Object {
        "active": true,
        "error": Object {
          "content": "error content",
          "title": "error title",
        },
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    prefixCls="ant-input"
    type="text"
    value="inputValue"
  />
</Popover>
`;

exports[`reduxFormFieldAdapter validate input should render Popover as visible if there is an error and the field is not active 1`] = `
<Popover
  content="error content"
  mouseEnterDelay={0.1}
  mouseLeaveDelay={0.1}
  overlayStyle={Object {}}
  placement="bottomLeft"
  prefixCls="ant-popover"
  title="error title"
  transitionName="zoom-big"
  trigger="hover"
  visible={true}
>
  <Input
    className="is-invalid AdaptedReduxFormField--isValidatedInput"
    disabled={false}
    meta={
      Object {
        "active": false,
        "error": Object {
          "content": "error content",
          "title": "error title",
        },
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    prefixCls="ant-input"
    type="text"
    value="inputValue"
  />
</Popover>
`;

exports[`reduxFormFieldAdapter validate input should render as expected when there is not an error 1`] = `
<Popover
  mouseEnterDelay={0.1}
  mouseLeaveDelay={0.1}
  overlayStyle={Object {}}
  placement="bottomLeft"
  prefixCls="ant-popover"
  transitionName="zoom-big"
  trigger="hover"
  visible={false}
>
  <Input
    className="AdaptedReduxFormField--isValidatedInput"
    disabled={false}
    meta={
      Object {
        "active": false,
        "error": null,
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    prefixCls="ant-input"
    type="text"
    value="inputValue"
  />
</Popover>
`;
